fix flickering menu on ui bootstrap

--- a/src/main/webapp/style/less/custom.less
+++ b/src/main/webapp/style/less/custom.less
@@ -23,6 +23,32 @@
 @font-family-sans-serif:  Exo, "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Exo, Georgia, "Times New Roman", Times, serif;
 
+
+// angular stuff
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
+.ng-cloak, .x-ng-cloak,
+.ng-hide {
+  display: none !important;
+}
+
+ng\:form {
+  display: block;
+}
+
+.ng-animate-block-transitions {
+  transition:0s all!important;
+  -webkit-transition:0s all!important;
+}
+
+/* show the element during a show/hide animation when the
+ * animation is ongoing, but the .ng-hide class is active */
+.ng-hide-add-active, .ng-hide-remove {
+  display: block!important;
+}
+
+// universeadm specific
+
 body {
   padding-top: 60px;
   padding-bottom: 20px;
